--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -2,8 +2,8 @@ pipeline {
     agent any
 
     environment {
-        AWS_ACCEESS_KEY_ID = creedentials('aws-access-key-id')
-        AWS_SECRET_ACCESS_KEY = creedentials('aws-secret-access-key')
+        AWS_ACCEESS_KEY_ID = credentials('aws-access-key-id')
+        AWS_SECRET_ACCESS_KEY = credentials('aws-secret-access-key')
         AWS_DEFAULT_REGION = "us-east-1"
     }
 
