--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
 
         stage('Terraform Apply') {
             when {
-                branch 'master'
+                branch 'main'
             }
 
             steps {
